# ChangeLog for dev-python/PythonQt
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Feb 2010; <slep@gentoo.org> PythonQt-1.1.ebuild:
  QA

  18 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> PythonQt-1.1.ebuild:
  add ~x86 keyword

  18 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> PythonQt-1.1.ebuild:
  add install PythonQtGui header

  06 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> +PythonQt-1.1.ebuild,
  +metadata.xml:
  initial commit
