@@ -1,4 +1,6 @@
 DIST PythonQt-1.1.zip 507747 RMD160 1992953e2a97b892b9c0aeaa3d3b34f3ba5998fb SHA1 1ca4cad1aebc364700a79b1fbfc4f3bd32eb6807 SHA256 901096018f07fc81ab11a9f29c61cf1cb8a4b47721b8250b0ccc6e904590f5a9
+DIST PythonQt2.0.1.zip 1313424 RMD160 70cf46a20ac4b890f78c120919eaa8982152eda8 SHA1 255b36b41b62d8f19b8ab48b92dcbbaf4a8154fa SHA256 d7d155892bfd05315386aebc17a65d59e30b6707f9f0efe7a6cafdc57eaefa4f
 EBUILD PythonQt-1.1.ebuild 1291 RMD160 1a2d3e3bc3ff21599200f8209bebab54ada00fef SHA1 94f7693b2c12ff96c3927ae0b3efdec73e631dad SHA256 9031b321f25c76562b924b3f6684013f095671119c2c9b64e22beeceed8b13cf
-MISC ChangeLog 492 RMD160 baa9a4111a22068da6aa00149b4bb814f922ca48 SHA1 76e5c26b06898a886453fdd5780e3f30ffcb85e4 SHA256 eb3ccec23837b2eaa74c8406e59d8be102ffcbbc7bfbe0227fa8c9920424d565
+EBUILD PythonQt-2.0.1.ebuild 1299 RMD160 bdd87f0e01f4f4fe7b7d28d7dcf32d93dd5abf6b SHA1 9f035a4287a72057dba03a4e70128901fcdde6b4 SHA256 dc3e5af9c088838a66b8c216bf829573e9707b682a38a2ab7e38f67dd74a6a90
+MISC ChangeLog 594 RMD160 0d5889f656b902fc126af61d4e7e0c822d62c3bc SHA1 9aac28c63831746442b0fb2962bd88d2fa4ff99f SHA256 191ef9cc7003f40324c266a17d16f5bfcbb7ee8f8214b6d776d01c8914770374
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
